openshift_samples/nodejs-enricher-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: null
  generation: 1
  labels:
    app: nodejs-enricher
  name: nodejs-enricher
  selfLink: /apis/apps.openshift.io/v1/namespaces/3scale/deploymentconfigs/nodejs-enricher
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: nodejs-enricher
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nodejs-enricher
        deploymentconfig: nodejs-enricher
    spec:
      containers:
      - env:
        - name: NODE_TLS_REJECT_UNAUTHORIZED
          value: "0"
        - name: ENRICHER_CONFIG_FILE
          value: /enricher/config/config.json
        image: 172.30.1.1:5000/3scale/nodejs-enricher@sha256:3b018adc50aeec1735df2e22b9bceda854dd40c8db6fc801f68887a96d133950
        imagePullPolicy: Always
        name: nodejs-enricher
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /enricher/config
          name: volume-qv08h
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: enricher-config
        name: volume-qv08h
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - nodejs-enricher
      from:
        kind: ImageStreamTag
        name: nodejs-enricher:latest
        namespace: 3scale
    type: ImageChange
  - type: ConfigChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
