openshift_samples/nodejs-enricher-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nodejs-enricher
  name: nodejs-enricher
  selfLink: /api/v1/namespaces/3scale/services/nodejs-enricher
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: nodejs-enricher
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
