openshift_samples/nodejs-enricher-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: nodejs-adminproxy
  name: nodejs-adminproxy
spec:
  port:
    targetPort: 8080-8080
  to:
    kind: Service
    name: nodejs-adminproxy
    weight: 100
  wildcardPolicy: None
